deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naginx-multitool
spec:
  selector:
    matchLabels:
      app: naginx-multitool
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: naginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
        - name: vol-nginx-default
          mountPath: /etc/nginx/conf.d
        - name: vol-nginx-index
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: praqma/network-multitool
        ports:
        - containerPort: 80
      volumes:
      - name: vol-nginx-default
        configMap:
          name: conf-nginx-default
      - name: vol-nginx-index
        configMap:
          name: conf-nginx-index
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - name: http
    port: 9001
    targetPort: 8080
    protocol: TCP
  selector:
    app: naginx-multitool
