deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naginx
spec:
  selector:
    matchLabels:
      app: naginx
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: naginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
        - name: vol-nginx-default
          mountPath: /etc/nginx/conf.d
        - name: vol-nginx-index
          mountPath: /usr/share/nginx/html
      volumes:
      - name: vol-nginx-default
        configMap:
          name: conf-nginx-default
      - name: vol-nginx-index
        configMap:
          name: conf-nginx-index
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - name: http
    port: 9001
    targetPort: 8080
    protocol: TCP
  selector:
    app: naginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  tls:
  - hosts:
    - example.com
    secretName: example-tls
  rules:
    - host: "example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 9001
